syntax = "proto3";

package api.admin;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "admin/types/notification.proto";
import "public/response/response.proto";
import "validate/validate.proto";

option go_package = "store/api/admin;adminpb";

service Admin {
  rpc GetNotifications (google.protobuf.Empty) returns (api.admin.types.Notification) {
    option (google.api.http) = {
      get: "/api/app-notifications"
    };
  };
}
